test/good/classes/super01.px

class A def
    func toString() String def
        return "A"

class B(A) def
    func toString() String def
        return super() + 'B'

print B()
