test/bad/classes/super02.px

class A def
    func f() def
        return

class B(A) def
    func g() def
        super()
